--- a/index.html
+++ b/index.html
@@ -46,6 +46,79 @@
 
 </script>
 <style>
+<style>
+/* ==== iOS / App Store Style Overrides ==== */
+
+/* Используем системный iOS-шрифт */
+body, html {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  background-color: #f2f2f7; /* iOS светло-серый фон */
+  color: #1c1c1e; /* iOS текст */
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Центрированная карточка игры */
+.game-container {
+  background: white;
+  border-radius: 28px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+  padding: 24px;
+  border: none;
+  transition: all 0.3s ease;
+}
+
+/* Кнопки в стиле iOS */
+.shop-button {
+  background: #007aff; /* iOS синий */
+  color: white;
+  border-radius: 14px;
+  font-size: 17px;
+  font-weight: 500;
+  padding: 10px 20px;
+  border: none;
+  transition: all 0.2s ease;
+}
+
+.shop-button:active {
+  opacity: 0.7;
+}
+
+/* Загрузочный экран с градиентом и плавным стилем */
+.loading-screen {
+  background: linear-gradient(160deg, #dbe4f0, #f2f2f7);
+}
+
+/* Плавающий текст с плавной анимацией */
+.floating-text {
+  font-size: 22px;
+  color: #32d74b;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+}
+
+/* Модальные окна с iOS стеклянным стилем */
+.shop-modal, .booster-modal {
+  background: rgba(255,255,255,0.92);
+  backdrop-filter: blur(20px);
+  border-radius: 20px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+}
+
+/* Лидерборд стиль как Game Center */
+#leaderboardList li {
+  font-size: 16px;
+  margin: 8px 0;
+  padding: 6px 10px;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+  display: flex;
+  align-items: center;
+}
+
+/* Нижняя панель навигации (будет добавлена позже при расширении) */
+
+</style>
+
     * {
       box-sizing: border-box;
       margin: 0;
