--- a/index.html
+++ b/index.html
@@ -264,6 +264,53 @@ body, html {
   display: flex;
   align-items: center;
 }
+
+/* iOS App Store Style Navigation Bar */
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(16px);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  z-index: 10000;
+}
+
+.nav-item {
+  font-size: 12px;
+  color: #8e8e93;
+  text-align: center;
+  flex: 1;
+}
+
+.nav-item.active {
+  color: #007aff;
+}
+
+.nav-item .icon {
+  font-size: 24px;
+}
+
+/* App Store Styled Buttons */
+button, .shop-button {
+  background: #007aff;
+  color: white;
+  border: none;
+  border-radius: 14px;
+  font-size: 17px;
+  font-weight: 500;
+  padding: 10px 20px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  transition: all 0.2s ease;
+}
+
+button:active, .shop-button:active {
+  opacity: 0.8;
+}
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
 <body>
@@ -554,6 +601,25 @@ function saveProgress() {
 <h2>Топ игроков</h2>
 <ul id="leaderboardList"></ul>
 <button onclick="closeLeaderboard()">Закрыть</button>
+</div>
+
+<!-- iOS-Style Bottom Navigation -->
+<div class="bottom-nav">
+  <div class="nav-item active">
+    <span class="icon">📅</span><br>Сегодня
+  </div>
+  <div class="nav-item">
+    <span class="icon">🎮</span><br>Игры
+  </div>
+  <div class="nav-item">
+    <span class="icon">📦</span><br>Приложения
+  </div>
+  <div class="nav-item">
+    <span class="icon">🕹️</span><br>Arcade
+  </div>
+  <div class="nav-item">
+    <span class="icon">🔍</span><br>Поиск
+  </div>
 </div>
 </body>
 </html>
