--- a/index.html
+++ b/index.html
@@ -311,6 +311,66 @@ button, .shop-button {
 button:active, .shop-button:active {
   opacity: 0.8;
 }
+
+/* Встроенная внутриигровая iOS-панель */
+.in-game-nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: rgba(250, 250, 250, 0.9);
+  backdrop-filter: blur(16px);
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  box-shadow: 0 -2px 8px rgba(0,0,0,0.08);
+  z-index: 1000;
+  border-top: 1px solid rgba(0,0,0,0.1);
+}
+
+.tab-button {
+  flex: 1;
+  text-align: center;
+  color: #8e8e93;
+  font-size: 12px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.tab-button.active {
+  color: #007aff;
+  font-weight: 600;
+}
+
+.tab-button .icon {
+  font-size: 20px;
+  display: block;
+}
+
+/* Анимации вкладок */
+.tab-content {
+  display: none;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.tab-content.active {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.card {
+  margin: 20px auto;
+  max-width: 340px;
+  background: white;
+  border-radius: 28px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+  padding: 24px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #1c1c1e;
+}
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
 <body>
@@ -621,5 +681,40 @@ function saveProgress() {
     <span class="icon">🔍</span><br>Поиск
   </div>
 </div>
+
+<!-- Вкладки контента -->
+<div id="shop-content" class="tab-content active">
+  <div class="card">🛒 Магазин предметов</div>
+</div>
+<div id="boosters-content" class="tab-content">
+  <div class="card">⚡ Активируй бустеры для ускорения</div>
+</div>
+<div id="leaderboard-content" class="tab-content">
+  <div class="card">🏆 Лидеры по тапам</div>
+</div>
+<div id="exit-content" class="tab-content">
+  <div class="card">🚪 Выйти из игры</div>
+</div>
+
+<!-- Встроенная внутриигровая iOS-панель -->
+<div class="in-game-nav">
+  <div class="tab-button active" onclick="switchTab('shop')">🛒<br>Магазин</div>
+  <div class="tab-button" onclick="switchTab('boosters')">⚡<br>Бустеры</div>
+  <div class="tab-button" onclick="switchTab('leaderboard')">🏆<br>Лидерборд</div>
+  <div class="tab-button" onclick="switchTab('exit')">🚪<br>Выйти</div>
+</div>
+
+<script>
+function switchTab(tab) {
+  const buttons = document.querySelectorAll('.tab-button');
+  buttons.forEach(btn => btn.classList.remove('active'));
+  const contents = document.querySelectorAll('.tab-content');
+  contents.forEach(c => c.classList.remove('active'));
+
+  document.querySelector('.tab-button[onclick*="' + tab + '"]').classList.add('active');
+  const tabEl = document.getElementById(tab + '-content');
+  if (tabEl) tabEl.classList.add('active');
+}
+</script>
 </body>
 </html>
