--- a/index.html
+++ b/index.html
@@ -371,9 +371,33 @@ button:active, .shop-button:active {
   font-weight: 500;
   color: #1c1c1e;
 }
+
+/* Встроенная внутриигровая iOS-панель (фикс: не перекрывает контент) */
+.in-game-nav {
+  position: relative;
+  width: 100%;
+  background: rgba(250, 250, 250, 0.9);
+  backdrop-filter: blur(16px);
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  box-shadow: 0 -2px 8px rgba(0,0,0,0.08);
+  z-index: 10;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  margin-top: auto;
+}
+
+/* Контейнер всего содержимого */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-bottom: 80px; /* чтобы контент не прятался за нижней панелью */
+}
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
 <body>
+<div class="main-container">
 <div class="loading-screen" id="loading">
 <img alt="Loading..." src="w1.png" style="position:absolute; width:100%; height:100%; object-fit:cover; z-index:-1;"/>
 <div style="position:absolute; bottom:80px; width:100%; text-align:center;">
@@ -697,9 +721,7 @@ function saveProgress() {
 </div>
 
 <!-- Встроенная внутриигровая iOS-панель -->
-<div class="in-game-nav">
-  <div class="tab-button active" onclick="switchTab('shop')">🛒<br>Магазин</div>
-  <div class="tab-button" onclick="switchTab('boosters')">⚡<br>Бустеры</div>
+<div class="tab-button" onclick="switchTab('boosters')">⚡<br>Бустеры</div>
   <div class="tab-button" onclick="switchTab('leaderboard')">🏆<br>Лидерборд</div>
   <div class="tab-button" onclick="switchTab('exit')">🚪<br>Выйти</div>
 </div>
@@ -716,5 +738,15 @@ function switchTab(tab) {
   if (tabEl) tabEl.classList.add('active');
 }
 </script>
+
+<!-- Обновлённая внутриигровая панель -->
+<div class="in-game-nav">
+  <div class="tab-button active" onclick="switchTab('shop')">🛒<br>Магазин</div>
+  <div class="tab-button" onclick="switchTab('boosters')">⚡<br>Бустеры</div>
+  <div class="tab-button" onclick="switchTab('leaderboard')">🏆<br>Лидерборд</div>
+  <div class="tab-button" onclick="switchTab('exit')">🚪<br>Выйти</div>
+</div>
+
+</div>
 </body>
 </html>
