--- a/index.html
+++ b/index.html
@@ -46,377 +46,21 @@
 
 </script>
 <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    html, body {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: linear-gradient(160deg, #e8ecef, #cfd8dc);
-      font-family: 'Segoe UI', sans-serif;
-      touch-action: manipulation;
-    }
-    .loading-screen {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: #fff;
-      z-index: 9999;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .loading-screen img {
-      max-width: 80%;
-    }
-    .loading-screen span {
-      font-size: 20px;
-      margin-top: 12px;
-      color: #333;
-    }
-    .game-container {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      width: 90vw;
-      max-width: 400px;
-      height: 90vh;
-      max-height: 700px;
-      background: #ffffff;
-      border: 4px solid #d0d0d0;
-      border-radius: 24px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .balance {
-      color: #111;
-      font-size: 22px;
-      font-weight: bold;
-    }
-    .tap-image {
-      max-width: 100%;
-      cursor: pointer;
-      transition: transform 0.1s;
-      border-radius: 16px;
-    }
-    .tap-animation {
-      animation: tapPulse 0.2s ease;
-    }
-    @keyframes tapPulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(0.9); }
-      100% { transform: scale(1); }
-    }
-    .floating-text {
-      position: absolute;
-      font-size: 18px;
-      color: #3cba54;
-      font-weight: 700;
-      animation: floatUp 1s ease-out forwards;
-      pointer-events: none;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    }
-    @keyframes floatUp {
-      0% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(-50px); }
-    }
-    .menu-buttons {
-      display: flex;
-      gap: 12px;
-    }
-    .shop-button {
-      background: #3cba54;
-      color: white;
-      border: none;
-      padding: 10px 16px;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .shop-modal, .booster-modal {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.95);
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      z-index: 10;
-    }
-    .shop-item, .booster-item {
-      margin: 10px;
-      text-align: center;
-    }
-    .shop-item img {
-      width: 100px;
-      height: auto;
-      border-radius: 12px;
-    }
-    .shop-item button, .booster-item button {
-      margin-top: 5px;
-      padding: 6px 12px;
-      border: none;
-      background: #333;
-      color: white;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-  
-.tap-image:active {
-  transform: scale(0.88);
-  filter: brightness(0.95);
-}
+/* --- Чистый и упорядоченный стиль для iOS-интерфейса --- */
 
-.floating-text {
-  font-size: 24px !important;
-  color: #00c853 !important;
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
-}
-
-.shop-button {
-  background: linear-gradient(135deg, #43e97b, #38f9d7) !important;
-  transition: all 0.2s ease;
-}
-
-.shop-button:active {
-  transform: scale(0.96);
-  filter: brightness(0.9);
-}
-
-@keyframes loadProgress {
-  0% { width: 0%; }
-  100% { width: 100%; }
-}
-
-@keyframes loadProgress {
-  0% { width: 0%; }
-  100% { width: 100%; }
-}
-
-/* ==== iOS / App Store Style Enhancements (Safe) ==== */
-body, html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  background-color: #f2f2f7;
-  color: #1c1c1e;
-  -webkit-font-smoothing: antialiased;
-}
-
-.game-container {
-  background: #ffffff;
-  border-radius: 28px;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-  padding: 24px;
-  border: none;
-}
-
-.shop-button {
-  background: #007aff;
-  color: white;
-  border-radius: 14px;
-  font-size: 17px;
-  font-weight: 500;
-  padding: 10px 20px;
-  border: none;
-  transition: all 0.2s ease;
-}
-
-.shop-button:active {
-  opacity: 0.7;
-}
-
-.loading-screen {
-  background: linear-gradient(160deg, #dbe4f0, #f2f2f7);
-}
-
-.floating-text {
-  font-size: 22px;
-  color: #32d74b;
-  text-shadow: 0 1px 2px rgba(0,0,0,0.25);
-}
-
-.shop-modal, .booster-modal {
-  background: rgba(255,255,255,0.95);
-  backdrop-filter: blur(16px);
-  border-radius: 20px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-}
-
-#leaderboardList li {
-  font-size: 16px;
-  margin: 8px 0;
-  padding: 6px 10px;
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-  display: flex;
-  align-items: center;
-}
-
-/* iOS App Store Style Navigation Bar */
-.bottom-nav {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 80px;
-  background: rgba(255, 255, 255, 0.85);
-  backdrop-filter: blur(16px);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-top: 1px solid rgba(0,0,0,0.1);
-  z-index: 10000;
-}
-
-.nav-item {
-  font-size: 12px;
-  color: #8e8e93;
-  text-align: center;
-  flex: 1;
-}
-
-.nav-item.active {
-  color: #007aff;
-}
-
-.nav-item .icon {
-  font-size: 24px;
-}
-
-/* App Store Styled Buttons */
-button, .shop-button {
-  background: #007aff;
-  color: white;
-  border: none;
-  border-radius: 14px;
-  font-size: 17px;
-  font-weight: 500;
-  padding: 10px 20px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  transition: all 0.2s ease;
-}
-
-button:active, .shop-button:active {
-  opacity: 0.8;
-}
-
-/* Встроенная внутриигровая iOS-панель */
-.in-game-nav {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background: rgba(250, 250, 250, 0.9);
-  backdrop-filter: blur(16px);
-  display: flex;
-  justify-content: space-around;
-  padding: 10px 0;
-  box-shadow: 0 -2px 8px rgba(0,0,0,0.08);
-  z-index: 1000;
-  border-top: 1px solid rgba(0,0,0,0.1);
-}
-
-.tab-button {
-  flex: 1;
-  text-align: center;
-  color: #8e8e93;
-  font-size: 12px;
+/* Центрированный аватар */
+#shark-image {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 4px solid white;
+  object-fit: cover;
+  display: block;
+  margin: 20px auto;
   cursor: pointer;
-  transition: color 0.3s ease;
 }
 
-.tab-button.active {
-  color: #007aff;
-  font-weight: 600;
-}
-
-.tab-button .icon {
-  font-size: 20px;
-  display: block;
-}
-
-/* Анимации вкладок */
-.tab-content {
-  display: none;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-.tab-content.active {
-  display: block;
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.card {
-  margin: 20px auto;
-  max-width: 340px;
-  background: white;
-  border-radius: 28px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-  padding: 24px;
-  font-size: 18px;
-  font-weight: 500;
-  color: #1c1c1e;
-}
-
-/* Встроенная внутриигровая iOS-панель (фикс: не перекрывает контент) */
-.in-game-nav {
-  position: relative;
-  width: 100%;
-  background: rgba(250, 250, 250, 0.9);
-  backdrop-filter: blur(16px);
-  display: flex;
-  justify-content: space-around;
-  padding: 10px 0;
-  box-shadow: 0 -2px 8px rgba(0,0,0,0.08);
-  z-index: 10;
-  border-top: 1px solid rgba(0,0,0,0.1);
-  margin-top: auto;
-}
-
-/* Контейнер всего содержимого */
-.main-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  padding-bottom: 80px; /* чтобы контент не прятался за нижней панелью */
-}
-
-/* Кнопка "Магазин предметов" и нижняя панель одинаковые */
-.shop-button, .in-game-nav {
-  background: rgba(255, 255, 255, 0.9);
-  border-radius: 24px;
-  backdrop-filter: blur(16px);
-  padding: 12px 24px;
-  margin: 20px auto;
-  text-align: center;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  font-weight: 600;
-  max-width: 90%;
-}
-
-/* Центрированный блок */
-.centered-block {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
-}
-
-/* Кнопки в нижнем меню */
+/* Кнопки нижнего меню */
 .tab-button {
   background: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
@@ -430,17 +74,18 @@ button:active, .shop-button:active {
   text-align: center;
 }
 
-/* Центрированный аватар */
-#shark-image {
-  width: 120px !important;
-  height: 120px !important;
-  border-radius: 50% !important;
-  border: 4px solid white;
-  object-fit: cover;
-  display: block;
-  margin: 0 auto;
-  margin-top: 20px;
-  cursor: pointer;
+/* Нижнее меню */
+.in-game-nav {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+  z-index: 1000;
 }
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
@@ -465,13 +110,13 @@ button:active, .shop-button:active {
 </div>
 <div class="game-container" id="gameContainer" style="display:none">
 <div class="balance" id="tokenCount">0 токенов</div>
-<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src=""/>
+<img alt="Shark" class="tap-image" id="shark-image" onclick="handleTap()" src="" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; object-fit: cover; display: block; margin: 20px auto; cursor: pointer;"/>
 <div class="menu-buttons">
-<button class="shop-button" onclick="openShop()">Магазин</button>
-<button class="shop-button" onclick="openBoosters()">Бустеры</button>
+
+
 </div>
-<button class="shop-button" onclick="openLeaderboard()">Лидерборд</button>
-<button class="shop-button" id="endButton" onclick="Telegram.WebApp.close()" style="display: none;">Завершить</button>
+
+
 </div>
 <div class="shop-modal" id="shop-modal">
 <div class="shop-item">
