--- a/index.html
+++ b/index.html
@@ -235,6 +235,58 @@
 .tab-button:active {
   background: #e6e6e6;
 }
+
+body {
+  background: #f2f2f7;
+}
+
+.game-container {
+  background: #fff;
+  border-radius: 28px;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+  padding: 24px;
+  max-width: 420px;
+  width: 92vw;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  box-sizing: border-box;
+  height: auto;
+  min-height: 88vh;
+}
+
+.balance {
+  font-size: 24px;
+  font-weight: 600;
+  color: #1c1c1e;
+  margin-bottom: 12px;
+}
+
+.tab-button {
+  background: #fff;
+  border: none;
+  padding: 12px 18px;
+  font-size: 15px;
+  font-weight: 600;
+  border-radius: 16px;
+  color: #007aff;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+  transition: background 0.2s ease;
+}
+
+.tab-button:active {
+  background: #e5e5ea;
+}
+
+.in-game-nav {
+  margin-top: 24px;
+  gap: 12px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
 <body>
@@ -257,10 +309,7 @@
 </div>
 <div class="game-container" id="gameContainer" style="display:none">
 <div class="balance" id="tokenCount">0 токенов</div>
-<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="" style="width: 140px; height: 140px; border-radius: 50%; border: 4px solid white; object-fit: cover; display: block; margin: 0 auto 20px auto; box-shadow: 0 2px 12px rgba(0,0,0,0.15);"/>
-
-
-
+<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="" style="width: 200px; height: 200px; border-radius: 50%; border: 6px solid white; object-fit: cover; display: block; margin: 0 auto 24px auto; box-shadow: 0 4px 16px rgba(0,0,0,0.15); transition: transform 0.2s ease;"/>
 <div class="in-game-nav"><button class="tab-button" onclick="openShop()">🛒 Магазин</button><button class="tab-button" onclick="openBoosters()">🚀 Бустеры</button><button class="tab-button" onclick="openLeaderboard()">🏆 Лидерборд</button><button class="tab-button" onclick="Telegram.WebApp.close()">❌ Завершить</button></div></div>
 <div class="shop-modal" id="shop-modal">
 <div class="shop-item">
